--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
     <title>Title</title>
 </head>
 <body>
